# capnp-cross-plat

./: .gitmodules  basic  go.mod  go.sum  main  proto.capnp  readme.md
go/: main.go  proto.capnp.go  xxhash.go
rust/: Cargo.toml  build.rs  proto.capnp
rust/src/: main.rs
